--- a/views/partials/userProfile.handlebars
+++ b/views/partials/userProfile.handlebars
@@ -15,7 +15,7 @@
     </div>
 
     <!-- Buttons -->
-    <div class="mt-3">
+    {{!-- <div class="mt-3">
         <form action= "/updateUser/{{user.userId}}" method="GET">
         <button type="submit" id="update-user-button" class="btn btn-primary btn-sm mr-2">Edit User Info</button>
         </form>
@@ -23,7 +23,7 @@
         <button type="submit" id="logout-button" class="btn btn-primary btn-sm mr-3">Log Off</button>
         </form>
       
-    </div>
+    </div> --}}
 </div>
 
 
