done client side-validation in search thumbs up

--- a/views/partials/search.handlebars
+++ b/views/partials/search.handlebars
@@ -1,5 +1,9 @@
 <!-- Search Reviews -->
-<div id="reviewSearch">
+
+<form id="reviewSearch">
     <input type="text" placeholder="Search businesses ...." id="reviewSearchBar">
     <button>Search</button>
+</form>
+<div id="client-error">
+
 </div>
