--- a/views/createReview.handlebars
+++ b/views/createReview.handlebars
@@ -1,5 +1,5 @@
 <div class="container mt-4">
-    <form action="/review/createReview" method="POST" name="reviewForm" id="reviewForm" class="p-4 border rounded">
+    <form action="/review/createReview" method="POST" name="reviewForm" id="reviewForm" class="p-4 border rounded" enctype="multipart/form-data">
         
         <!-- Categories Dropdown -->
         <div class="form-group">
