Fixed add image functionality

--- a/views/myReview.handlebars
+++ b/views/myReview.handlebars
@@ -14,7 +14,7 @@
             <h4 class="h6">Ratings: {{this.rating}}</h4>
             <p>{{this.description}}</p>
             {{#if this.image}}
-            <img src="{{this.image}}" alt="Review Image" class="img-fluid">
+            <img src="/{{this.image}}" alt="Review Image" class="img-fluid">
             {{/if}}
         </div>
         <ul class="list-group list-group-flush">
