--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <title>{{{title}}}</title>
+    <title>ReviewSphere</title>
     
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 
@@ -61,7 +61,7 @@
         </nav>
     </header>
 
-    <h1>{{{heading1}}}</h1>
+    {{!-- <h1>{{{heading1}}}</h1> --}}
         {{{body}}}  
     <footer>
         <footer class="bg-light text-center text-lg-start">
