--- a/views/partials/searchBar.handlebars
+++ b/views/partials/searchBar.handlebars
@@ -48,7 +48,7 @@
         </div>
     </div>
 </div> --}}
-<div class="container">
+{{!-- <div class="container">
     <div class="row">
         <div class="col-md-9">
             <form id="searchForm">
@@ -85,4 +85,4 @@
         </div>
     </div>
 </div>
-
+ --}}
