--- a/views/partials/followingList.handlebars
+++ b/views/partials/followingList.handlebars
@@ -23,7 +23,7 @@
 
 
     <div class="input-group mb-3">
-        <input type="text" class="form-control" id="userSearchInput" placeholder="Search people..." aria-label="Search people" aria-describedby="button-addon2">
+        <input type="text" class="form-control" id="userSearchInput" placeholder="Search people..." aria-label="Search people" aria-describedby="goButton">
         <div class="input-group-append">
             <button class="btn btn-outline-secondary" type="button" id="goButton">Go</button>
         </div>
