--- a/views/partials/searchBar.handlebars
+++ b/views/partials/searchBar.handlebars
@@ -54,8 +54,8 @@
             <form id="searchForm">
                 <!-- Dropdown for Category -->
                 <div class="form-group">
-                    <label for="categorySelect">Category</label>
-                    <select class="form-control" id="categorySelect">
+                    <label for="categorySelect1">Category</label>
+                    <select class="form-control" id="categorySelect1">
                         <!-- Options will be populated here -->
                     </select>
                 </div>
