--- a/views/partials/searchBar.handlebars
+++ b/views/partials/searchBar.handlebars
@@ -47,15 +47,16 @@
             </div>
         </div>
     </div>
+{{!-- </div> --}}
 </div> --}}
-{{!-- <div class="container">
+<div class="container">
     <div class="row">
         <div class="col-md-9">
             <form id="searchForm">
                 <!-- Dropdown for Category -->
                 <div class="form-group">
-                    <label for="categorySelect1">Category</label>
-                    <select class="form-control" id="categorySelect1">
+                    <label for="categorySelect">Category</label>
+                    <select class="form-control" id="categorySelect">
                         <!-- Options will be populated here -->
                     </select>
                 </div>
@@ -85,4 +86,3 @@
         </div>
     </div>
 </div>
- --}}
