Register User Route Validation

--- a/views/updateUser.handlebars
+++ b/views/updateUser.handlebars
@@ -39,12 +39,13 @@
             {{/if}}
 
             <label for="sexInput">Sex</label>
-            <select id="sexInput" class="form-control" name="sexInput" value="{{sexDef}}" required>
-                <option value="" selected disabled hidden>Choose here</option>
-                <option value="male">Male</option>
-                <option value="female">Female</option>
-                <option value="other">Other</option>
+            <select id="sexInput" class="form-control" name="sexInput" required>
+                <option value="" disabled hidden>Choose here</option>
+                <option value="male" {% if sexDef == 'male' %}selected{% endif %}>Male</option>
+                <option value="female" {% if sexDef == 'female' %}selected{% endif %}>Female</option>
+                <option value="other" {% if sexDef == 'other' %}selected{% endif %}>Other</option>
             </select>
+
             {{#if sexErr}}
                 <div id="sexError" class="errorMessage">
                     {{sexErr}}
