Fix bugsa and client side validation in  Authentication module

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -153,3 +153,9 @@ body {
 .bold-text {
     font-weight: bold;
 }
+
+.errorMessage {
+    color: red;
+    font-size: 0.8em;
+    margin-top: 5px;
+}
