additiona user module change

--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -73,4 +73,5 @@ TODO place holder
             <a href="/register">Click here to register!</a>
         </p>
     </div>
+    <script src="/public/js/loginPageClientValidation.js"></script>
 </main>
