--- a/views/register.handlebars
+++ b/views/register.handlebars
@@ -301,4 +301,5 @@ registration handelbars
             </p>
         </form>
     </div>
+    <script src="/public/js/registerPageClientValidation.js"></script>
 </main>
