--- a/views/updateUser.handlebars
+++ b/views/updateUser.handlebars
@@ -1,6 +1,6 @@
 
 <main class="container mt-4">
-    <form id="update-form" action="/updateUser" method="post" class="p-4 border rounded">
+    <form id="updateUser-form" action="/updateUser" method="post" class="p-4 border rounded">
         <div class="form-group">
             <label for="firstNameInput">First Name</label>
             <input type="text" class="form-control" id="firstNameInput" name="firstNameInput" value="{{firstNameDef}}" required>
@@ -152,5 +152,6 @@
     <p id="loginLinkForExistingUser" class="text-center">
         <a href="/login">Already have an account? Click here to log-in</a>
     </p>
+    <script src="/public/js/registerPageClientValidation.js"></script>
 </main>
 
