Backbone for searchfeature

--- a/views/partials/searchBar.handlebars
+++ b/views/partials/searchBar.handlebars
@@ -2,11 +2,11 @@
 <div class="container">
     <div class="row">
         <div class="col-md-9">
-            <form id="searchForm">
+            <form id="searchRanking">
                 <!-- Dropdown for Category -->
                 <div class="form-group">
-                    <label for="categorySelect">Category</label>
-                    <select class="form-control" id="categorySelect">
+                    <label for="categorySelectSearch">Category</label>
+                    <select class="form-control" id="categorySelectSearch">
                         <!-- Options will be populated here -->
                     </select>
                 </div>
@@ -31,7 +31,7 @@
                     </div>
                 </div>
 
-                <button type="submit" class="btn btn-primary mt-3" id="searchButton">SortByRating</button>
+                <button type="submit" class="btn btn-primary mt-3" id="searchButtonRanking">Search</button>
             </form>
         </div>
     </div>
