--- a/views/updateUser.handlebars
+++ b/views/updateUser.handlebars
@@ -145,13 +145,13 @@
         <!-- Repeat for other fields -->
 
         <div class="form-group">
-            <button type="submit" class="btn btn-primary">Update</button>
+            <button id="updateUser-button" type="submit" class="btn btn-primary">Update</button>
         </div>
     </form>
 
     <p id="loginLinkForExistingUser" class="text-center">
         <a href="/login">Already have an account? Click here to log-in</a>
     </p>
-    <script src="/public/js/registerPageClientValidation.js"></script>
+    <script src="/public/js/updateUserPageClientValidation.js"></script>
 </main>
 
