--- a/views/register.handlebars
+++ b/views/register.handlebars
@@ -292,7 +292,7 @@ registration handelbars
 
             <!-- Submit Button -->
             <div class="form-group">
-                <button type="submit" class="btn btn-primary">Sign Up</button>
+                <button id="register-button" type="submit" class="btn btn-primary">Sign Up</button>
             </div>
 
             <!-- Login Link for Existing Users -->
