--- a/views/partials/searchBar.handlebars
+++ b/views/partials/searchBar.handlebars
@@ -20,6 +20,10 @@
                     <input class="form-check-input" type="checkbox" id="femaleCheckbox" value="female">
                     <label class="form-check-label" for="femaleCheckbox">Female</label>
                 </div>
+                <div class="form-check form-check-inline">
+                    <input class="form-check-input" type="checkbox" id="friendsCheckbox" value="friends">
+                    <label class="form-check-label" for="friendsCheckbox">Following Only</label>
+                </div>
 
                 <!-- Number Fields for Age -->
                 <div class="form-row">
