--- a/views/partials/searchBar.handlebars
+++ b/views/partials/searchBar.handlebars
@@ -26,14 +26,14 @@
                 </div>
 
                 <!-- Number Fields for Age -->
-                {{!-- <div class="form-row">
+                <div class="form-row">
                     <div class="col">
                         <input type="number" class="form-control" placeholder="Min Age" id="minAge">
                     </div>
                     <div class="col">
                         <input type="number" class="form-control" placeholder="Max Age" id="maxAge">
                     </div>
-                </div> --}}
+                </div>
 
                 <button type="submit" class="btn btn-primary mt-3" id="searchButtonRanking">Search</button>
             </form>
